Closed
Bug 232642
Opened 21 years ago
Closed 21 years ago
[ActiveX] crash if access twice the same html element
Categories
(Core Graveyard :: Embedding: ActiveX Wrapper, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
People
(Reporter: atremon, Assigned: atremon)
Details
(Keywords: crash, fixed1.4.2)
Attachments
(1 file)
|
674 bytes,
patch
|
adamlock
:
review+
jst
:
superreview+
mkaply
:
approval1.4.2+
chofmann
:
approval1.7a+
|
Details | Diff | Splinter Review |
User-Agent:
Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.6) Gecko/20040113
crashes in
http://lxr.mozilla.org/seamonkey/source/nsprpub/lib/ds/plhash.c#301
Reproducible: Always
Steps to Reproduce:
This VB exemple crashes:
Dim document As HTMLDocument
Dim body1, body2 As IHTMLElement
Set document = MozillaBrowser1.document
Set body1 = document.body
Set body2 = document.body
| Assignee | ||
Comment 1•21 years ago
|
||
When calling PL_NewHashTable, a NULL PLHashComparator is passed as
'valueCompare' parameter. Pass the same compare function as for the
'keyCompare' parameter: a function that compares the values of pointers
Comment on attachment 140230 [details] [diff] [review]
Defines valueCompare callback for the PL_HashTable structure used
r=adamlock
Attachment #140230 -
Flags: review+
| Assignee | ||
Updated•21 years ago
|
Flags: blocking1.7b+
Flags: blocking1.7a+
Flags: blocking1.4.2+
| Assignee | ||
Updated•21 years ago
|
Flags: blocking1.7b?
Flags: blocking1.7b+
Flags: blocking1.7a?
Flags: blocking1.7a+
Flags: blocking1.4.2?
Flags: blocking1.4.2+
Attachment #140230 -
Flags: superreview?(tor)
Comment 3•21 years ago
|
||
Comment on attachment 140230 [details] [diff] [review]
Defines valueCompare callback for the PL_HashTable structure used
sr=jst
Attachment #140230 -
Flags: superreview?(tor) → superreview+
Comment 4•21 years ago
|
||
Comment on attachment 140230 [details] [diff] [review]
Defines valueCompare callback for the PL_HashTable structure used
a=chofmann for 1.7a need to land quickly if you want to make the train..
thanks
Attachment #140230 -
Flags: approval1.7a+
Updated•21 years ago
|
Flags: blocking1.7a? → blocking1.7a+
Updated•21 years ago
|
Status: UNCONFIRMED → NEW
Ever confirmed: true
Checking in mozilla/embedding/browser/activex/src/common/IEHtmlNode.cpp;
/cvsroot/mozilla/embedding/browser/activex/src/common/IEHtmlNode.cpp,v <--
IEHtmlNode.cpp
new revision: 1.3; previous revision: 1.2
done
Please resolve this if it's fixed
Assignee: adamlock → atremon
| Assignee | ||
Comment 6•21 years ago
|
||
What am I supposed to do?
Write "1.3" after ",v" ?
Other question: how do I change the 'assigned to' ?
Comment 7•21 years ago
|
||
Alexandre - You can change who this a bug is assigned to by filling in the
"reassign bug to" box in the form, selecting the button next to it and clicking
commit. However, this bug has been assigned to you, which is correct.
What you need to do is check if the problem is fixed in a new build of Mozilla
containing your patch, and then you can select "Resolve bug, changing resolution
to FIXED" and commit.
Comment 8•21 years ago
|
||
marking fixed, so it gets on the test radar
Status: NEW → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
Comment 10•21 years ago
|
||
Can someone put this in for 1.4.2 or should I?
Flags: blocking1.4.2? → blocking1.4.2+
Updated•21 years ago
|
Attachment #140230 -
Flags: approval1.4.2+
Updated•21 years ago
|
Keywords: fixed1.4.2
Updated•13 years ago
|
Product: Core → Core Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•