Bug 232642 [ActiveX] crash if access twice the same html element patch by atremon@elansoftware.com r=adamlock sr=jst a=chofmann